[package]
name = "elflib"
version = "0.1.0"
edition = "2021"


[dependencies]
getset = "0.1.2"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
memmap2 = "0.5.4"

clap = { version = "^3", features = ["derive"], optional = true }
clap_complete = { version = "3.1.1", optional = true }
shellexpand = { version = "2.1", optional = true }


[features]
elfview = ["clap", "clap_complete", "shellexpand"]

[[bin]]
required-features = ["elfview"]
name = "elfview"
path = "bin/elfview.rs"
